// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SendTransactionForm should render 1`] = `
<div>
  <div
    class="space-y-8 SendTransactionForm"
  >
    <fieldset
      class="FormField__FormFieldStyled-yeauwd-0 cnlnjc relative"
    >
      <div
        class="mb-2"
      >
        <label
          class="inline-block flex mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-secondary-700"
          data-testid="FormLabel"
          for="network"
        >
          Cryptoasset
          <div
            class="mt-1 ml-1 w-1 h-1 rounded-full bg-theme-danger-400"
            data-testid="FormLabel__required"
          />
        </label>
      </div>
      <div>
        <div
          aria-expanded="false"
          aria-haspopup="listbox"
          aria-owns="SendTransactionForm__network-menu"
          data-testid="SelectNetwork"
          role="combobox"
        >
          <label
            for="SendTransactionForm__network-input"
            id="SendTransactionForm__network-label"
          />
          <div
            class="InputGroup-sc-1obbdqe-3 bgPpWR"
            data-testid="SelectNetworkInput"
          >
            <div
              class="InputGroup__InputAddon-sc-1obbdqe-0 InputGroup__InputAddonStart-sc-1obbdqe-1 bsvVEG hMbbfK px-4"
            >
              <div
                class="Circle-uw7h4j-0 blBpcG border-theme-secondary-200 dark:border-theme-secondary-700 text-theme-secondary-500"
                data-testid="SelectNetworkInput__network"
              />
            </div>
            <input
              aria-autocomplete="list"
              aria-controls="SendTransactionForm__network-menu"
              aria-labelledby="SendTransactionForm__network-label"
              autocomplete="off"
              class="Input__InputStyled-wu99qs-0 eVdxgh overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-secondary-400 dark:border-theme-secondary-700 text-theme-text transition-colors duration-200 px-4 py-3 no-ligatures pl-15"
              data-testid="SelectNetworkInput__input"
              id="SendTransactionForm__network-input"
              placeholder="Enter a cryptoasset name"
              value=""
            />
          </div>
        </div>
        <ul
          aria-labelledby="SendTransactionForm__network-label"
          class="hidden"
          id="SendTransactionForm__network-menu"
          role="listbox"
        />
      </div>
    </fieldset>
    <fieldset
      class="FormField__FormFieldStyled-yeauwd-0 cnlnjc relative"
    >
      <div
        class="mb-2"
      >
        <label
          class="inline-block flex mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-secondary-700"
          data-testid="FormLabel"
          for="senderAddress"
        >
          Sender
          <div
            class="mt-1 ml-1 w-1 h-1 rounded-full bg-theme-danger-400"
            data-testid="FormLabel__required"
          />
        </label>
      </div>
      <div
        data-testid="sender-address"
      >
        <div>
          <button
            class="SelectAddressstyles__SelectAddressWrapper-vvcyzs-0 ksbSWA SelectAddress  "
            data-testid="SelectAddress__wrapper"
            type="button"
          >
            <div
              class="Circle-uw7h4j-0 blBpcG mr-3 ml-4 bg-theme-secondary-200 dark:bg-theme-secondary-700 border-theme-secondary-200 dark:border-theme-secondary-700"
            />
            <div
              class="inline-flex items-center no-ligatures"
            />
            <div
              class="flex absolute right-4 items-center space-x-3 text-theme-primary-300 dark:text-theme-secondary-600"
            >
              <div
                class="sc-bdfBwQ iyevwF"
                height="20"
                width="20"
              >
                <svg>
                  user.svg
                </svg>
              </div>
            </div>
          </button>
          <input
            class="Input__InputStyled-wu99qs-0 eVdxgh overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-secondary-400 dark:border-theme-secondary-700 text-theme-text transition-colors duration-200 px-4 py-3 no-ligatures hidden"
            data-testid="SelectAddress__input"
            name="senderAddress"
            readonly=""
            type="text"
            value=""
          />
        </div>
      </div>
    </fieldset>
    <fieldset
      class="FormField__FormFieldStyled-yeauwd-0 cnlnjc flex flex-col space-y-2"
    >
      <label
        class="inline-block flex mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-secondary-700"
        data-testid="FormLabel"
        for="fee"
      >
        Transaction Fee
        <div
          class="mt-1 ml-1 w-1 h-1 rounded-full bg-theme-danger-400"
          data-testid="FormLabel__required"
        />
      </label>
      <div
        class="flex space-x-2"
        data-testid="InputFee"
      >
        <div
          class="flex-1"
        >
          <div
            class="InputGroup-sc-1obbdqe-3 bgPpWR"
          >
            <input
              class="Input__InputStyled-wu99qs-0 eVdxgh overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-secondary-400 dark:border-theme-secondary-700 text-theme-text transition-colors duration-200 px-4 py-3 no-ligatures "
              data-testid="InputCurrency"
              name="fee"
              type="text"
              value="0"
            />
            <div
              class="absolute bottom-0 px-1 w-full"
            >
              <div
                class="flex flex-wrap justify-center"
                data-testid="Range"
              >
                <div
                  class="Range__Track-sc-10itqc2-0 sgjTD"
                  data-testid="Range__track"
                  style="transform: scale(1); cursor: pointer;"
                >
                  <div
                    class="Range__TrackFilled-sc-10itqc2-1 egFfKP"
                    data-testid="Range__track__filled"
                  >
                    <div
                      aria-valuemax="2e-8"
                      aria-valuemin="0"
                      aria-valuenow="0"
                      class="Range__Thumb-sc-10itqc2-2 hXgqqU"
                      data-testid="Range__thumb"
                      draggable="false"
                      role="slider"
                      style="position: absolute; z-index: 0; cursor: grab; user-select: none; transform: translate(0px, 0px);"
                      tabindex="0"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="inline-flex overflow-hidden flex-shrink-0 items-center rounded border border-theme-secondary-300 dark:border-theme-secondary-800"
          data-testid="SelectionBar"
          role="radiogroup"
        >
          <button
            aria-checked="true"
            class="SelectionBar__SelectionBarOptionStyled-sc-1twgklc-0 kUebLA relative items-center px-4 h-full border-transparent transition-colors duration-300 first:pl-6 last:pr-6 focus:outline-none border-b-3"
            data-testid="SelectionBarOption"
            role="radio"
            type="button"
          >
            Min
          </button>
          <button
            aria-checked="false"
            class="SelectionBar__SelectionBarOptionStyled-sc-1twgklc-0 kUebLA relative items-center px-4 h-full border-transparent transition-colors duration-300 first:pl-6 last:pr-6 focus:outline-none border-b-3"
            data-testid="SelectionBarOption"
            role="radio"
            type="button"
          >
            Average
          </button>
          <button
            aria-checked="false"
            class="SelectionBar__SelectionBarOptionStyled-sc-1twgklc-0 kUebLA relative items-center px-4 h-full border-transparent transition-colors duration-300 first:pl-6 last:pr-6 focus:outline-none border-b-3"
            data-testid="SelectionBarOption"
            role="radio"
            type="button"
          >
            Max
          </button>
        </div>
      </div>
    </fieldset>
  </div>
</div>
`;

exports[`SendTransactionForm should select a sender & update fees 1`] = `
<div>
  <div
    class="space-y-8 SendTransactionForm"
  >
    <fieldset
      class="FormField__FormFieldStyled-yeauwd-0 cnlnjc relative"
    >
      <div
        class="mb-2"
      >
        <label
          class="inline-block flex mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-secondary-700"
          data-testid="FormLabel"
          for="network"
        >
          Cryptoasset
          <div
            class="mt-1 ml-1 w-1 h-1 rounded-full bg-theme-danger-400"
            data-testid="FormLabel__required"
          />
        </label>
      </div>
      <div>
        <div
          aria-expanded="false"
          aria-haspopup="listbox"
          aria-owns="SendTransactionForm__network-menu"
          data-testid="SelectNetwork"
          role="combobox"
        >
          <label
            for="SendTransactionForm__network-input"
            id="SendTransactionForm__network-label"
          />
          <div
            class="InputGroup-sc-1obbdqe-3 bgPpWR"
            data-testid="SelectNetworkInput"
          >
            <div
              class="InputGroup__InputAddon-sc-1obbdqe-0 InputGroup__InputAddonStart-sc-1obbdqe-1 bsvVEG hMbbfK px-4"
            >
              <div
                aria-label="ARK Devnet"
                class="Circle-uw7h4j-0 blBpcG border-theme-primary-100 text-theme-primary-400"
                data-testid="SelectNetworkInput__network"
              >
                <div
                  class="sc-bdfBwQ iyevwF"
                  data-testid="NetworkIcon__icon"
                  height="20"
                  width="20"
                >
                  <svg>
                    ark.svg
                  </svg>
                </div>
              </div>
            </div>
            <input
              aria-autocomplete="list"
              aria-controls="SendTransactionForm__network-menu"
              aria-labelledby="SendTransactionForm__network-label"
              autocomplete="off"
              class="Input__InputStyled-wu99qs-0 eVdxgh overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-secondary-400 dark:border-theme-secondary-700 text-theme-text transition-colors duration-200 px-4 py-3 no-ligatures pl-15"
              data-testid="SelectNetworkInput__input"
              id="SendTransactionForm__network-input"
              placeholder="Enter a cryptoasset name"
              value=""
            />
          </div>
        </div>
        <ul
          aria-labelledby="SendTransactionForm__network-label"
          class="hidden"
          id="SendTransactionForm__network-menu"
          role="listbox"
        />
      </div>
    </fieldset>
    <fieldset
      class="FormField__FormFieldStyled-yeauwd-0 cnlnjc relative"
    >
      <div
        class="mb-2"
      >
        <label
          class="inline-block flex mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-secondary-700"
          data-testid="FormLabel"
          for="senderAddress"
        >
          Sender
          <div
            class="mt-1 ml-1 w-1 h-1 rounded-full bg-theme-danger-400"
            data-testid="FormLabel__required"
          />
        </label>
      </div>
      <div
        data-testid="sender-address"
      >
        <div>
          <button
            class="SelectAddressstyles__SelectAddressWrapper-vvcyzs-0 ksbSWA SelectAddress  "
            data-testid="SelectAddress__wrapper"
            type="button"
          >
            <div
              class="Avatar__AvatarWrapper-sc-1vsy2s2-0 kvvaRs mx-4"
              data-testid="Avatar"
            >
              <div
                class="w-full h-full"
              >
                <img
                  alt="D5sRKWckH4rE1hQ9eeMeHAepgyC3cvJtwb"
                  src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(244, 67, 54)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"20\\" cy=\\"50\\" fill=\\"rgb(205, 220, 57)\\"/><circle r=\\"60\\" cx=\\"0\\" cy=\\"70\\" fill=\\"rgb(0, 188, 212)\\"/><circle r=\\"55\\" cx=\\"80\\" cy=\\"30\\" fill=\\"rgb(76, 175, 80)\\"/></svg>"
                  title="D5sRKWckH4rE1hQ9eeMeHAepgyC3cvJtwb"
                />
              </div>
            </div>
            <div
              class="inline-flex items-center no-ligatures"
            >
              <span
                class="TruncateMiddle__Wrapper-sc-3j3e79-0 text-theme-text truncate font-semibold text-base"
                data-testid="address__wallet-address"
              >
                D5sRKWckH4rE1…AepgyC3cvJtwb
              </span>
            </div>
            <div
              class="flex absolute right-4 items-center space-x-3 text-theme-primary-300 dark:text-theme-secondary-600"
            >
              <div
                class="sc-bdfBwQ iyevwF"
                height="20"
                width="20"
              >
                <svg>
                  user.svg
                </svg>
              </div>
            </div>
          </button>
          <input
            class="Input__InputStyled-wu99qs-0 eVdxgh overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-secondary-400 dark:border-theme-secondary-700 text-theme-text transition-colors duration-200 px-4 py-3 no-ligatures hidden"
            data-testid="SelectAddress__input"
            name="senderAddress"
            readonly=""
            type="text"
            value="D5sRKWckH4rE1hQ9eeMeHAepgyC3cvJtwb"
          />
        </div>
      </div>
    </fieldset>
    <fieldset
      class="FormField__FormFieldStyled-yeauwd-0 cnlnjc flex flex-col space-y-2"
    >
      <label
        class="inline-block flex mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-secondary-700"
        data-testid="FormLabel"
        for="fee"
      >
        Transaction Fee
        <div
          class="mt-1 ml-1 w-1 h-1 rounded-full bg-theme-danger-400"
          data-testid="FormLabel__required"
        />
      </label>
      <div
        class="flex space-x-2"
        data-testid="InputFee"
      >
        <div
          class="flex-1"
        >
          <div
            class="InputGroup-sc-1obbdqe-3 bgPpWR"
          >
            <input
              class="Input__InputStyled-wu99qs-0 eVdxgh overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-secondary-400 dark:border-theme-secondary-700 text-theme-text transition-colors duration-200 px-4 py-3 no-ligatures "
              data-testid="InputCurrency"
              name="fee"
              type="text"
              value="0"
            />
            <div
              class="absolute bottom-0 px-1 w-full"
            >
              <div
                class="flex flex-wrap justify-center"
                data-testid="Range"
              >
                <div
                  class="Range__Track-sc-10itqc2-0 sgjTD"
                  data-testid="Range__track"
                  style="transform: scale(1); cursor: pointer;"
                >
                  <div
                    class="Range__TrackFilled-sc-10itqc2-1 egFfKP"
                    data-testid="Range__track__filled"
                  >
                    <div
                      aria-valuemax="6.63"
                      aria-valuemin="0"
                      aria-valuenow="0"
                      class="Range__Thumb-sc-10itqc2-2 hXgqqU"
                      data-testid="Range__thumb"
                      draggable="false"
                      role="slider"
                      style="position: absolute; z-index: 0; cursor: grab; user-select: none; transform: translate(0px, 0px);"
                      tabindex="0"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="inline-flex overflow-hidden flex-shrink-0 items-center rounded border border-theme-secondary-300 dark:border-theme-secondary-800"
          data-testid="SelectionBar"
          role="radiogroup"
        >
          <button
            aria-checked="false"
            class="SelectionBar__SelectionBarOptionStyled-sc-1twgklc-0 kUebLA relative items-center px-4 h-full border-transparent transition-colors duration-300 first:pl-6 last:pr-6 focus:outline-none border-b-3"
            data-testid="SelectionBarOption"
            role="radio"
            type="button"
          >
            Min
          </button>
          <button
            aria-checked="false"
            class="SelectionBar__SelectionBarOptionStyled-sc-1twgklc-0 kUebLA relative items-center px-4 h-full border-transparent transition-colors duration-300 first:pl-6 last:pr-6 focus:outline-none border-b-3"
            data-testid="SelectionBarOption"
            role="radio"
            type="button"
          >
            Average
          </button>
          <button
            aria-checked="false"
            class="SelectionBar__SelectionBarOptionStyled-sc-1twgklc-0 kUebLA relative items-center px-4 h-full border-transparent transition-colors duration-300 first:pl-6 last:pr-6 focus:outline-none border-b-3"
            data-testid="SelectionBarOption"
            role="radio"
            type="button"
          >
            Max
          </button>
        </div>
      </div>
    </fieldset>
  </div>
</div>
`;

exports[`SendTransactionForm should select fill out form 1`] = `
<div>
  <div
    class="space-y-8 SendTransactionForm"
  >
    <fieldset
      class="FormField__FormFieldStyled-yeauwd-0 cnlnjc relative"
    >
      <div
        class="mb-2"
      >
        <label
          class="inline-block flex mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-secondary-700"
          data-testid="FormLabel"
          for="network"
        >
          Cryptoasset
          <div
            class="mt-1 ml-1 w-1 h-1 rounded-full bg-theme-danger-400"
            data-testid="FormLabel__required"
          />
        </label>
      </div>
      <div>
        <div
          aria-expanded="false"
          aria-haspopup="listbox"
          aria-owns="SendTransactionForm__network-menu"
          data-testid="SelectNetwork"
          role="combobox"
        >
          <label
            for="SendTransactionForm__network-input"
            id="SendTransactionForm__network-label"
          />
          <div
            class="InputGroup-sc-1obbdqe-3 bgPpWR"
            data-testid="SelectNetworkInput"
          >
            <div
              class="InputGroup__InputAddon-sc-1obbdqe-0 InputGroup__InputAddonStart-sc-1obbdqe-1 bsvVEG hMbbfK px-4"
            >
              <div
                class="Circle-uw7h4j-0 blBpcG border-theme-secondary-200 dark:border-theme-secondary-700 text-theme-secondary-500"
                data-testid="SelectNetworkInput__network"
              />
            </div>
            <input
              aria-autocomplete="list"
              aria-controls="SendTransactionForm__network-menu"
              aria-labelledby="SendTransactionForm__network-label"
              autocomplete="off"
              class="Input__InputStyled-wu99qs-0 eVdxgh overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-secondary-400 dark:border-theme-secondary-700 text-theme-text transition-colors duration-200 px-4 py-3 no-ligatures pl-15"
              data-testid="SelectNetworkInput__input"
              id="SendTransactionForm__network-input"
              placeholder="Enter a cryptoasset name"
              value=""
            />
          </div>
        </div>
        <ul
          aria-labelledby="SendTransactionForm__network-label"
          class="hidden"
          id="SendTransactionForm__network-menu"
          role="listbox"
        />
      </div>
    </fieldset>
    <fieldset
      class="FormField__FormFieldStyled-yeauwd-0 cnlnjc relative"
    >
      <div
        class="mb-2"
      >
        <label
          class="inline-block flex mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-secondary-700"
          data-testid="FormLabel"
          for="senderAddress"
        >
          Sender
          <div
            class="mt-1 ml-1 w-1 h-1 rounded-full bg-theme-danger-400"
            data-testid="FormLabel__required"
          />
        </label>
      </div>
      <div
        data-testid="sender-address"
      >
        <div>
          <button
            class="SelectAddressstyles__SelectAddressWrapper-vvcyzs-0 ksbSWA SelectAddress  "
            data-testid="SelectAddress__wrapper"
            type="button"
          >
            <div
              class="Circle-uw7h4j-0 blBpcG mr-3 ml-4 bg-theme-secondary-200 dark:bg-theme-secondary-700 border-theme-secondary-200 dark:border-theme-secondary-700"
            />
            <div
              class="inline-flex items-center no-ligatures"
            />
            <div
              class="flex absolute right-4 items-center space-x-3 text-theme-primary-300 dark:text-theme-secondary-600"
            >
              <div
                class="sc-bdfBwQ iyevwF"
                height="20"
                width="20"
              >
                <svg>
                  user.svg
                </svg>
              </div>
            </div>
          </button>
          <input
            class="Input__InputStyled-wu99qs-0 eVdxgh overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-secondary-400 dark:border-theme-secondary-700 text-theme-text transition-colors duration-200 px-4 py-3 no-ligatures hidden"
            data-testid="SelectAddress__input"
            name="senderAddress"
            readonly=""
            type="text"
            value=""
          />
        </div>
      </div>
    </fieldset>
    <fieldset
      class="FormField__FormFieldStyled-yeauwd-0 cnlnjc flex flex-col space-y-2"
    >
      <label
        class="inline-block flex mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-secondary-700"
        data-testid="FormLabel"
        for="fee"
      >
        Transaction Fee
        <div
          class="mt-1 ml-1 w-1 h-1 rounded-full bg-theme-danger-400"
          data-testid="FormLabel__required"
        />
      </label>
      <div
        class="flex space-x-2"
        data-testid="InputFee"
      >
        <div
          class="flex-1"
        >
          <div
            class="InputGroup-sc-1obbdqe-3 bgPpWR"
          >
            <input
              class="Input__InputStyled-wu99qs-0 eVdxgh overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-secondary-400 dark:border-theme-secondary-700 text-theme-text transition-colors duration-200 px-4 py-3 no-ligatures "
              data-testid="InputCurrency"
              name="fee"
              type="text"
              value="0.00000001"
            />
            <div
              class="absolute bottom-0 px-1 w-full"
            >
              <div
                class="flex flex-wrap justify-center"
                data-testid="Range"
              >
                <div
                  class="Range__Track-sc-10itqc2-0 sgjTD"
                  data-testid="Range__track"
                  style="transform: scale(1); cursor: pointer;"
                >
                  <div
                    class="Range__TrackFilled-sc-10itqc2-1 egFfKP"
                    data-testid="Range__track__filled"
                  >
                    <div
                      aria-valuemax="2e-8"
                      aria-valuemin="0"
                      aria-valuenow="1e-8"
                      class="Range__Thumb-sc-10itqc2-2 hXgqqU"
                      data-testid="Range__thumb"
                      draggable="false"
                      role="slider"
                      style="position: absolute; z-index: 0; cursor: grab; user-select: none; transform: translate(0px, 0px);"
                      tabindex="0"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="inline-flex overflow-hidden flex-shrink-0 items-center rounded border border-theme-secondary-300 dark:border-theme-secondary-800"
          data-testid="SelectionBar"
          role="radiogroup"
        >
          <button
            aria-checked="false"
            class="SelectionBar__SelectionBarOptionStyled-sc-1twgklc-0 kUebLA relative items-center px-4 h-full border-transparent transition-colors duration-300 first:pl-6 last:pr-6 focus:outline-none border-b-3"
            data-testid="SelectionBarOption"
            role="radio"
            type="button"
          >
            Min
          </button>
          <button
            aria-checked="true"
            class="SelectionBar__SelectionBarOptionStyled-sc-1twgklc-0 kUebLA relative items-center px-4 h-full border-transparent transition-colors duration-300 first:pl-6 last:pr-6 focus:outline-none border-b-3"
            data-testid="SelectionBarOption"
            role="radio"
            type="button"
          >
            Average
          </button>
          <button
            aria-checked="false"
            class="SelectionBar__SelectionBarOptionStyled-sc-1twgklc-0 kUebLA relative items-center px-4 h-full border-transparent transition-colors duration-300 first:pl-6 last:pr-6 focus:outline-none border-b-3"
            data-testid="SelectionBarOption"
            role="radio"
            type="button"
          >
            Max
          </button>
        </div>
      </div>
    </fieldset>
  </div>
</div>
`;

exports[`SendTransactionForm should use static fees if avg is not available 1`] = `
<div>
  <div
    class="space-y-8 SendTransactionForm"
  >
    <fieldset
      class="FormField__FormFieldStyled-yeauwd-0 cnlnjc relative"
    >
      <div
        class="mb-2"
      >
        <label
          class="inline-block flex mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-secondary-700"
          data-testid="FormLabel"
          for="network"
        >
          Cryptoasset
          <div
            class="mt-1 ml-1 w-1 h-1 rounded-full bg-theme-danger-400"
            data-testid="FormLabel__required"
          />
        </label>
      </div>
      <div>
        <div
          aria-expanded="false"
          aria-haspopup="listbox"
          aria-owns="SendTransactionForm__network-menu"
          data-testid="SelectNetwork"
          role="combobox"
        >
          <label
            for="SendTransactionForm__network-input"
            id="SendTransactionForm__network-label"
          />
          <div
            class="InputGroup-sc-1obbdqe-3 bgPpWR"
            data-testid="SelectNetworkInput"
          >
            <div
              class="InputGroup__InputAddon-sc-1obbdqe-0 InputGroup__InputAddonStart-sc-1obbdqe-1 bsvVEG hMbbfK px-4"
            >
              <div
                aria-label="ARK Devnet"
                class="Circle-uw7h4j-0 blBpcG border-theme-primary-100 text-theme-primary-400"
                data-testid="SelectNetworkInput__network"
              >
                <div
                  class="sc-bdfBwQ iyevwF"
                  data-testid="NetworkIcon__icon"
                  height="20"
                  width="20"
                >
                  <svg>
                    ark.svg
                  </svg>
                </div>
              </div>
            </div>
            <input
              aria-autocomplete="list"
              aria-controls="SendTransactionForm__network-menu"
              aria-labelledby="SendTransactionForm__network-label"
              autocomplete="off"
              class="Input__InputStyled-wu99qs-0 eVdxgh overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-secondary-400 dark:border-theme-secondary-700 text-theme-text transition-colors duration-200 px-4 py-3 no-ligatures pl-15"
              data-testid="SelectNetworkInput__input"
              id="SendTransactionForm__network-input"
              placeholder="Enter a cryptoasset name"
              value=""
            />
          </div>
        </div>
        <ul
          aria-labelledby="SendTransactionForm__network-label"
          class="hidden"
          id="SendTransactionForm__network-menu"
          role="listbox"
        />
      </div>
    </fieldset>
    <fieldset
      class="FormField__FormFieldStyled-yeauwd-0 cnlnjc relative"
    >
      <div
        class="mb-2"
      >
        <label
          class="inline-block flex mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-secondary-700"
          data-testid="FormLabel"
          for="senderAddress"
        >
          Sender
          <div
            class="mt-1 ml-1 w-1 h-1 rounded-full bg-theme-danger-400"
            data-testid="FormLabel__required"
          />
        </label>
      </div>
      <div
        data-testid="sender-address"
      >
        <div>
          <button
            class="SelectAddressstyles__SelectAddressWrapper-vvcyzs-0 ksbSWA SelectAddress  "
            data-testid="SelectAddress__wrapper"
            type="button"
          >
            <div
              class="Avatar__AvatarWrapper-sc-1vsy2s2-0 kvvaRs mx-4"
              data-testid="Avatar"
            >
              <div
                class="w-full h-full"
              >
                <img
                  alt="D5sRKWckH4rE1hQ9eeMeHAepgyC3cvJtwb"
                  src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(244, 67, 54)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"20\\" cy=\\"50\\" fill=\\"rgb(205, 220, 57)\\"/><circle r=\\"60\\" cx=\\"0\\" cy=\\"70\\" fill=\\"rgb(0, 188, 212)\\"/><circle r=\\"55\\" cx=\\"80\\" cy=\\"30\\" fill=\\"rgb(76, 175, 80)\\"/></svg>"
                  title="D5sRKWckH4rE1hQ9eeMeHAepgyC3cvJtwb"
                />
              </div>
            </div>
            <div
              class="inline-flex items-center no-ligatures"
            >
              <span
                class="TruncateMiddle__Wrapper-sc-3j3e79-0 text-theme-text truncate font-semibold text-base"
                data-testid="address__wallet-address"
              >
                D5sRKWckH4rE1…AepgyC3cvJtwb
              </span>
            </div>
            <div
              class="flex absolute right-4 items-center space-x-3 text-theme-primary-300 dark:text-theme-secondary-600"
            >
              <div
                class="sc-bdfBwQ iyevwF"
                height="20"
                width="20"
              >
                <svg>
                  user.svg
                </svg>
              </div>
            </div>
          </button>
          <input
            class="Input__InputStyled-wu99qs-0 eVdxgh overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-secondary-400 dark:border-theme-secondary-700 text-theme-text transition-colors duration-200 px-4 py-3 no-ligatures hidden"
            data-testid="SelectAddress__input"
            name="senderAddress"
            readonly=""
            type="text"
            value="D5sRKWckH4rE1hQ9eeMeHAepgyC3cvJtwb"
          />
        </div>
      </div>
    </fieldset>
    <fieldset
      class="FormField__FormFieldStyled-yeauwd-0 cnlnjc flex flex-col space-y-2"
    >
      <label
        class="inline-block flex mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-secondary-700"
        data-testid="FormLabel"
        for="fee"
      >
        Transaction Fee
        <div
          class="mt-1 ml-1 w-1 h-1 rounded-full bg-theme-danger-400"
          data-testid="FormLabel__required"
        />
      </label>
      <div
        class="flex space-x-2"
        data-testid="InputFee"
      >
        <div
          class="flex-1"
        >
          <div
            class="InputGroup-sc-1obbdqe-3 bgPpWR"
          >
            <input
              class="Input__InputStyled-wu99qs-0 eVdxgh overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-secondary-400 dark:border-theme-secondary-700 text-theme-text transition-colors duration-200 px-4 py-3 no-ligatures "
              data-testid="InputCurrency"
              name="fee"
              type="text"
              value="0"
            />
            <div
              class="absolute bottom-0 px-1 w-full"
            >
              <div
                class="flex flex-wrap justify-center"
                data-testid="Range"
              >
                <div
                  class="Range__Track-sc-10itqc2-0 sgjTD"
                  data-testid="Range__track"
                  style="transform: scale(1); cursor: pointer;"
                >
                  <div
                    class="Range__TrackFilled-sc-10itqc2-1 egFfKP"
                    data-testid="Range__track__filled"
                  >
                    <div
                      aria-valuemax="6.63"
                      aria-valuemin="0"
                      aria-valuenow="0"
                      class="Range__Thumb-sc-10itqc2-2 hXgqqU"
                      data-testid="Range__thumb"
                      draggable="false"
                      role="slider"
                      style="position: absolute; z-index: 0; cursor: grab; user-select: none; transform: translate(0px, 0px);"
                      tabindex="0"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="inline-flex overflow-hidden flex-shrink-0 items-center rounded border border-theme-secondary-300 dark:border-theme-secondary-800"
          data-testid="SelectionBar"
          role="radiogroup"
        >
          <button
            aria-checked="false"
            class="SelectionBar__SelectionBarOptionStyled-sc-1twgklc-0 kUebLA relative items-center px-4 h-full border-transparent transition-colors duration-300 first:pl-6 last:pr-6 focus:outline-none border-b-3"
            data-testid="SelectionBarOption"
            role="radio"
            type="button"
          >
            Min
          </button>
          <button
            aria-checked="false"
            class="SelectionBar__SelectionBarOptionStyled-sc-1twgklc-0 kUebLA relative items-center px-4 h-full border-transparent transition-colors duration-300 first:pl-6 last:pr-6 focus:outline-none border-b-3"
            data-testid="SelectionBarOption"
            role="radio"
            type="button"
          >
            Average
          </button>
          <button
            aria-checked="false"
            class="SelectionBar__SelectionBarOptionStyled-sc-1twgklc-0 kUebLA relative items-center px-4 h-full border-transparent transition-colors duration-300 first:pl-6 last:pr-6 focus:outline-none border-b-3"
            data-testid="SelectionBarOption"
            role="radio"
            type="button"
          >
            Max
          </button>
        </div>
      </div>
    </fieldset>
  </div>
</div>
`;
